namespaces/live.cloud-platform.service.justice.gov.uk/apply-for-compensation-prototype-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apply-for-compensation-prototype-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "CICA"
    cloud-platform.justice.gov.uk/slack-channel: "cica-digital"
    cloud-platform.justice.gov.uk/application: "Gov.UK Prototype Kit"
    cloud-platform.justice.gov.uk/owner: "Apply Team: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/apply-for-compensation-prototype"
    cloud-platform.justice.gov.uk/team-name: "cica"
    cloud-platform.justice.gov.uk/review-after: ""
